# bonanza

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  go.mod  go.sum  package.json  pnpm-lock.yaml  push_all_containers.sh  reformat.sh
.github/workflows/: master.yaml  pull-requests.yaml
cmd/bonanza_bazel/: BUILD.bazel  main.go
cmd/bonanza_browser/: BUILD.bazel  browser_service.go  generate_stylesheet.js  main.go  stylesheet.css
cmd/bonanza_builder/: BUILD.bazel  main.go
cmd/bonanza_fetcher/: BUILD.bazel  main.go
cmd/bonanza_scheduler/: BUILD.bazel  main.go
cmd/bonanza_storage_frontend/: BUILD.bazel  main.go
cmd/bonanza_storage_shard/: BUILD.bazel  main.go
cmd/bonanza_worker/: BUILD.bazel  main.go
cmd/create_x25519_client_certificate/: BUILD.bazel
cmd/mount_directory/: BUILD.bazel  main.go
deployments/demo/: BUILD.bazel  bonanza_bazel.cert.pem  bonanza_bazel.key.pem  bonanza_browser.jsonnet  bonanza_builder.jsonnet  bonanza_fetcher.jsonnet  bonanza_scheduler.jsonnet  bonanza_storage_frontend.jsonnet  bonanza_storage_shard.jsonnet  bonanza_worker.jsonnet  demo.sh
docs/: building_bb_storage.md  cryptography_overview.md  filesystem_merkletree.md
patches/com_github_buildbarn_bb_storage/: no-golint.diff
patches/net_starlark_go/: set-isdisjoint.diff
pkg/bazelclient/arguments/: BUILD.bazel  bazel_rc_reader_test.go  get_bazel_rc_paths_test.go  parse_bazel_rc_files.go  parse_bazel_rc_files_test.go  parse_command_and_arguments.go  parse_command_and_arguments_test.go  parse_startup_flags_test.go  parse_test.go
pkg/bazelclient/commands/: BUILD.bazel  util.go
pkg/bazelclient/formatted/: BUILD.bazel  attr.go  join.go  link.go  node.go  text.go  write_plain_text.go  write_plain_text_test.go  write_vt100.go  write_vt100_test.go
pkg/bazelclient/logging/: BUILD.bazel  console_logger.go  logger.go
pkg/compress/simplelzw/: BUILD.bazel  compress.go  compress_test.go  decompress.go  decompress_test.go
pkg/crypto/: BUILD.bazel  ecdh.go
pkg/diff/: BUILD.bazel  diff_test.go
pkg/ds/: BUILD.bazel
pkg/ds/lossymap/: BUILD.bazel  hash_map.go  hash_map_test.go  map.go  record_array.go  simple_record_array.go
pkg/encoding/float16/: BUILD.bazel  float16_test.go
pkg/encoding/varint/: BUILD.bazel  backward_test.go  forward_test.go
pkg/encryptedaction/: BUILD.bazel  action.go  aead.go  event_encoder.go
pkg/evaluation/: BUILD.bazel  computer.go  environment.go  fully_compute_value.go  fully_compute_value_test.go
pkg/evaluation/generate_computer/: BUILD.bazel  main.go
pkg/glob/: BUILD.bazel  matcher.go  matcher_test.go  nfa.go  nfa_test.go
pkg/label/: BUILD.bazel  apparent_label.go  apparent_label_test.go  apparent_repo.go  apparent_target_pattern.go  canonical_label.go  canonical_label_test.go  canonical_package.go  canonical_package_test.go  canonical_repo.go  canonical_repo_test.go  canonical_starlark_identifier.go  canonical_starlark_identifier_test.go  canonical_target_pattern.go  canonical_target_pattern_test.go  module.go  module_extension.go  module_instance.go  module_version.go  module_version_test.go  resolve.go  resolved_label.go  resolved_label_test.go  starlark_identifier.go  target_name.go  target_name_test.go
pkg/model/analysis/: BUILD.bazel  action_encoders.go  action_readers.go  action_result.go  base_computer.go  base_computer_test.go  canonical_repo_name.go  command_encoders.go  command_readers.go  compatible_execution_platforms.go  compatible_toolchains_for_type.go  compiled_bzl_file.go  computer.json  configured_target.go  ctx_wrapper.go  directory_creation_parameters.go  directory_readers.go  empty_default_info.go  exec_transition.go  file_access_parameters.go  file_creation_parameters.go  file_list_root.go  file_properties_value.go  (+48 more)
pkg/model/executewithstorage/: BUILD.bazel  client.go  executor.go
pkg/model/fetch/: BUILD.bazel  local_executor.go
pkg/proto/browser/: BUILD.bazel  browser.pb.go  browser.proto
pkg/proto/configuration/bonanza_browser/: BUILD.bazel  bonanza_browser.pb.go  bonanza_browser.proto
pkg/proto/configuration/bonanza_fetcher/: BUILD.bazel  bonanza_fetcher.pb.go  bonanza_fetcher.proto
pkg/proto/encryptedaction/: BUILD.bazel  encryptedaction.pb.go  encryptedaction.proto
pkg/proto/model/analysis/: BUILD.bazel  analysis.pb.go  analysis.proto
pkg/proto/model/core/: BUILD.bazel  core.pb.go  core.proto
pkg/proto/model/evaluation/: BUILD.bazel  evaluation.pb.go  evaluation.proto
pkg/proto/model/executewithstorage/: BUILD.bazel  executewithstorage.pb.go  executewithstorage.proto
pkg/proto/model/fetch/: BUILD.bazel  fetch.pb.go  fetch.proto
pkg/remoteexecution/: BUILD.bazel  client.go  proto_client.go  remote_client.go
pkg/remoteworker/: BUILD.bazel  client.go  executor.go  proto_executor.go
pkg/scheduler/: BUILD.bazel  in_memory_build_queue.go
pkg/search/: BUILD.bazel  multi_search_and_replacer_test.go
pkg/starlark/: BUILD.bazel  parse_module_dot_bazel.go  parse_module_dot_bazel_test.go
pkg/storage/object/existenceprecondition/: BUILD.bazel  downloader.go
pkg/storage/object/flatbacked/: BUILD.bazel  lease.go  store.go  store_test.go
pkg/storage/object/suspending/: BUILD.bazel  downloader.go
pkg/sync/: BUILD.bazel
starlark/bazel_tools/: MODULE.bazel
starlark/bazel_tools/command_line_option/: BUILD.bazel  settings.bzl
starlark/bazel_tools/fragments/: BUILD.bazel  fragment_info.bzl  fragments.bzl
starlark/bazel_tools/src/conditions/: BUILD.bazel
starlark/bazel_tools/tools/coverage/: BUILD.bazel
starlark/bazel_tools/tools/java/: BUILD.bazel
starlark/bazel_tools/tools/jdk/: BUILD.bazel
starlark/bazel_tools/tools/launcher/: BUILD.bazel
starlark/bazel_tools/tools/make/: BUILD.bazel  default_make_variables.bzl
starlark/bazel_tools/tools/osx/: BUILD
starlark/bazel_tools/tools/python/: BUILD.bazel
starlark/bazel_tools/tools/test/: BUILD.bazel
starlark/bazel_tools/tools/zip/: BUILD.bazel  zipper
starlark/builtins_core/: ctx_wrapper.bzl  exports.bzl  wrappers.bzl
tools/: workspace-status.sh
tools/github_workflows/: github_workflows.jsonnet
(+331 files in other folders)
