load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bonanza_fetcher_lib",
    srcs = ["main.go"],
    importpath = "bonanza.build/cmd/bonanza_fetcher",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/model/executewithstorage",
        "//pkg/model/fetch",
        "//pkg/model/parser",
        "//pkg/proto/configuration/bonanza_fetcher",
        "//pkg/proto/remoteworker",
        "//pkg/proto/storage/dag",
        "//pkg/proto/storage/object",
        "//pkg/remoteworker",
        "//pkg/storage/object/existenceprecondition",
        "//pkg/storage/object/grpc",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem/pool",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/http",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/random",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//semaphore",
    ],
)

go_binary(
    name = "bonanza_fetcher",
    embed = [":bonanza_fetcher_lib"],
    visibility = ["//visibility:public"],
)
