load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "crypto",
    srcs = ["ecdh.go"],
    importpath = "bonanza.build/pkg/crypto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@io_filippo_edwards25519//:edwards25519",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
