load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "encryptedaction",
    srcs = [
        "action.go",
        "aead.go",
        "event_encoder.go",
    ],
    importpath = "bonanza.build/pkg/encryptedaction",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/encryptedaction",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_secure_io_siv_go//:siv-go",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
    ],
)
