load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "glob",
    srcs = [
        "matcher.go",
        "nfa.go",
    ],
    importpath = "bonanza.build/pkg/glob",
    visibility = ["//visibility:public"],
    deps = ["//pkg/encoding/varint"],
)

go_test(
    name = "glob_test",
    srcs = [
        "matcher_test.go",
        "nfa_test.go",
    ],
    deps = [
        ":glob",
        "@com_github_stretchr_testify//require",
    ],
)
