load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "label",
    srcs = [
        "apparent_label.go",
        "apparent_repo.go",
        "apparent_target_pattern.go",
        "canonical_label.go",
        "canonical_package.go",
        "canonical_repo.go",
        "canonical_starlark_identifier.go",
        "canonical_target_pattern.go",
        "module.go",
        "module_extension.go",
        "module_instance.go",
        "module_version.go",
        "resolve.go",
        "resolved_label.go",
        "starlark_identifier.go",
        "target_name.go",
    ],
    importpath = "bonanza.build/pkg/label",
    visibility = ["//visibility:public"],
    deps = ["@com_github_buildbarn_bb_storage//pkg/filesystem/path"],
)

go_test(
    name = "label_test",
    srcs = [
        "apparent_label_test.go",
        "canonical_label_test.go",
        "canonical_package_test.go",
        "canonical_repo_test.go",
        "canonical_starlark_identifier_test.go",
        "canonical_target_pattern_test.go",
        "module_version_test.go",
        "resolved_label_test.go",
        "target_name_test.go",
    ],
    deps = [
        ":label",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
