load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "remoteexecution",
    srcs = [
        "client.go",
        "proto_client.go",
        "remote_client.go",
    ],
    importpath = "bonanza.build/pkg/remoteexecution",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/remoteexecution",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_secure_io_siv_go//:siv-go",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
