module(name = "bazel_tools")

bazel_dep(name = "bazel_skylib")
bazel_dep(name = "platforms")
bazel_dep(name = "protobuf")
bazel_dep(name = "rules_cc")
bazel_dep(name = "rules_java")
bazel_dep(name = "rules_python")
bazel_dep(name = "rules_shell")

xcode_configure = use_extension("//tools/osx:xcode_configure.bzl", "xcode_configure_extension")
use_repo(xcode_configure, "local_config_xcode")

remote_coverage_tools_extension = use_extension("//tools/test:extensions.bzl", "remote_coverage_tools_extension")
use_repo(remote_coverage_tools_extension, "remote_coverage_tools")
