load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "logging",
    srcs = [
        "console_logger.go",
        "logger.go",
    ],
    importpath = "github.com/buildbarn/bonanza/pkg/bazelclient/logging",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/bazelclient/arguments",
        "//pkg/bazelclient/formatted",
        "@org_golang_x_term//:term",
    ],
)
