load(
    ":fragments.bzl",
    "apple_fragment",
    "cpp_fragment",
    "java_fragment",
    "platform_fragment",
    "proto_fragment",
)

apple_fragment(name = "apple")

cpp_fragment(name = "cpp")

java_fragment(name = "java")

platform_fragment(name = "platform")

proto_fragment(name = "proto")
